test/classes/deitz/test_union2.good
x: (-1)
test_union2.chpl:14: error: halt reached - illegal union access
